--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dipti<br /> The Analyst Portfolio</title>
+		<title>Analytic express<br />Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Dipti<br /> The Analyst Portfolio<br />
+						<h1>Analytic express<br />Portfolio<br />
 						</h1>
 						<p>Transforming data into insights:Data Analyst Portfolio | Excel, SQL, Tableau Expertise <a href="https://www.linkedin.com/in/dipti-matkar">@DiptiTheAnalyst</a> 
 							<a href="https://html5up.net/license"></a></p>
